--- a/Style.css
+++ b/Style.css
@@ -31,8 +31,8 @@ body {
 
 .box {
     margin-top: 3%;
-    width: 400px;
-    height: 540px;
+    width: 26%;
+    height: 80%;
     color: #fff;
     top: 50%;
     left: 50%;
