--- a/Style.css
+++ b/Style.css
@@ -75,7 +75,7 @@ h1 {
 .box input[type = "text"] , input[type = "password"] 
 {
     border:none;
-    font-family: Sriracha;
+    font-family: bree serif;
     border-bottom: 1px solid #fff;
     background: transparent;
     outline: none;
