--- a/Style.css
+++ b/Style.css
@@ -44,6 +44,12 @@ body {
     border-radius: 10px;
 }
 
+@media only screen and (max-width: 600px) {
+    .box {
+       margin-top: 100px; 
+    }
+  }
+
 .profile {
     height:100px;
     width:100px;
