--- a/Style.css
+++ b/Style.css
@@ -46,7 +46,8 @@ body {
 
 @media only screen and (max-width: 600px) {
     .box {
-       margin-top: 100px; 
+       margin-top: 20px; 
+       width: 100%;
     }
   }
 
